<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.onehippo.cms7</groupId>
    <artifactId>hippo-cms7-release</artifactId>
    <version>7.7.7</version>
  </parent>

  <name>Inherit portal</name>
  <description>Inherit portal</description>
  <groupId>org.inheritsource.portal</groupId>
  <artifactId>inherit-portal</artifactId>
  <version>1.01.00-SNAPSHOT</version>
  <packaging>pom</packaging>

  <!-- 
    The below project elements are emptied/overridden as otherwise their metadata would be
    inherited or merged from the parent hippo-cms7-release pom (or its hippo-cms7-project pom).

    DO NOT remove these tags but instead fill them in appropriately as needed, 
    UNLESS the inherited values are valid for your project.
  -->
  <url/>
  <inceptionYear/>
  <organization/>
  <licenses>
    <license/>
  </licenses>
  <mailingLists>
    <mailingList/>
  </mailingLists>
  <developers>
    <developer/>
  </developers>
  <contributors>
    <contributor/>
  </contributors>
  <issueManagement/>
  <!--
  <scm>
    <connection/>
    <developerConnection/>
    <url/>
  </scm>
  -->
  <ciManagement/>
  <distributionManagement>
    <repository>
      <id/>
      <url/>
    </repository>
    <snapshotRepository>
      <id/>
      <url/>
    </snapshotRepository>
  </distributionManagement>
  <!-- End of emptied/overridden metadata from parent hippo-cms7-release pom. -->

  <properties>
    <jstl.version>1.1.2</jstl.version>
    <taglibs.version>1.1.2</taglibs.version>
    <commons.lang.version>2.6</commons.lang.version>
    <junit.version>4.10</junit.version>
    <freemarker.version>2.3.18</freemarker.version>
    <filesync.override>false</filesync.override>
    <maven.plugins.filesync.version>1.0.0</maven.plugins.filesync.version>

    <cargo.tomcat.major.version>7</cargo.tomcat.major.version> 
    <cargo.tomcat.full.version>7.0.47</cargo.tomcat.full.version>
  </properties>

  <repositories>
   	<repository>
			<id>JBoss</id>
			<name>JBoss Repository</name>
			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
	</repository>
    <repository>
      <id>hippo</id>
      <name>Hippo maven 2 repository.</name>
      <url>http://maven.onehippo.com/maven2/</url>
    </repository>
	<repository>
		<id>maven-restlet</id>
		<name>Public online Restlet repository</name>
		<url>http://maven.restlet.org</url>
	</repository>
    <repository>
        <id>forgerock</id>
        <url>http://repo.forgerock.org</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      
      <!-- other predefined runtime scope versioned dependencies -->
      <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>jstl</artifactId>
        <version>${jstl.version}</version>
        <scope>runtime</scope>
      </dependency>

      <dependency>
        <groupId>taglibs</groupId>
        <artifactId>standard</artifactId>
        <version>${taglibs.version}</version>
        <scope>runtime</scope>
      </dependency>

      <!-- other predefined compile scope versioned dependencies -->
      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>${commons.lang.version}</version>
      </dependency>

      <dependency>
        <groupId>org.freemarker</groupId>
        <artifactId>freemarker</artifactId>
        <version>${freemarker.version}</version>
      </dependency>
      
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>
  
  <build>
    <defaultGoal>package</defaultGoal>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.googlecode.mavenfilesync</groupId>
          <artifactId>maven-filesync-plugin</artifactId>
          <version>${maven.plugins.filesync.version}</version>
          <configuration>
            <override>${filesync.override}</override>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>generate</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>buildnumber-maven-plugin</artifactId>
        <version>${maven.plugin.buildnumber.version}</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>create</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <doCheck>false</doCheck>
          <doUpdate>false</doUpdate>
          <revisionOnScmFailure>-1</revisionOnScmFailure>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven.plugin.jar.version}</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Implementation-Build>${buildNumber}</Implementation-Build>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      
      <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.1</version>
		<configuration>
			<source>1.7</source>
			<target>1.7</target>
			<compilerArguments>
				<verbose/>
				<bootclasspath>${java.home}/lib/rt.jar</bootclasspath>
			</compilerArguments>
		</configuration>
      </plugin>
      
    </plugins>
  </build>

  <profiles>

    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
        <property>
          <name>jrebel</name>
        </property>
      </activation>
      <modules>
        <module>content</module>
        <module>cms</module>
        <module>site</module>
        <module>orbeon</module>
      </modules>
    </profile>

    <profile>
      <id>cargo.run</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven2-plugin</artifactId>
            <configuration>
              <configuration>
                <deployables>
                   <deployable>
                    <location>${project.basedir}/../postxdb/target/exist.war</location>
                    <type>war</type>
                    <properties>
                      <context>/exist</context>
                    </properties>
                  </deployable>
                  <deployable>
                    <location>${project.basedir}/../docbox/target/docbox.war</location>
                    <type>war</type>
                    <properties>
                      <context>/docbox</context>
                    </properties>
                  </deployable>
                   <deployable>
                    <location>${project.basedir}/orbeon/target/orbeon.war</location>
                    <type>war</type>
                    <properties>
                      <context>/orbeon</context>
                    </properties>
                  </deployable>
                   <deployable>
                    <location>${project.basedir}/../inherit-service/inherit-service-rest-server/target/restrice.war</location>
                    <type>war</type>
                    <properties>
                      <context>/restrice</context>
                    </properties>
                  </deployable>
                  <deployable>
                    <type>war</type>
                    <properties>
                      <context>/cms</context>
                    </properties>
                    <location>${project.basedir}/cms/target/cms.war</location>
                  </deployable>
                  <deployable>
                    <location>${project.basedir}/site/target/site.war</location>
                    <type>war</type>
                    <properties>
                      <context>/site</context>
                    </properties>
                  </deployable>
                </deployables>
                <configfiles>
                  <configfile>
                    <file>${project.basedir}/conf/context.xml</file>
                    <todir>conf/</todir>
                    <tofile>context.xml</tofile>
                  </configfile>
                </configfiles>
                <properties>
                	<cargo.jvmargs>-Xmx1024m -Xms512m -XX:PermSize=256m</cargo.jvmargs>
                </properties>
              </configuration>
              <container>
                <systemProperties>
                  <derby.stream.error.file>${project.basedir}/target/derby.log</derby.stream.error.file>
                  <log4j.configuration>file:${project.basedir}/conf/log4j-dev.xml</log4j.configuration>
                  <rebel.log4j-plugin>true</rebel.log4j-plugin>
                  <project.basedir>${project.basedir}</project.basedir>
                </systemProperties>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>dist</id>
      <dependencies>
        <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-log4j12</artifactId>
          <scope>provided</scope>
        </dependency>
        <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>jcl-over-slf4j</artifactId>
          <scope>provided</scope>
        </dependency>
        <dependency>
          <groupId>log4j</groupId>
          <artifactId>log4j</artifactId>
          <scope>provided</scope>
        </dependency>
      </dependencies>
      <build>
        <defaultGoal>validate</defaultGoal>
        <plugins>
          <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <executions>
              <execution>
                <id>distro-assembly</id>
                <phase>validate</phase>
                <goals>
                  <goal>single</goal>
                </goals>
                <configuration>
                  <descriptors>
                    <descriptor>${project.basedir}/src/main/assembly/distribution.xml</descriptor>
                  </descriptors>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>tools</id>
      <activation>
        <property>
          <name>java.vendor</name>
          <value>Sun Microsystems Inc.</value>
        </property>
      </activation>
      <dependencies>
        <dependency>
          <groupId>com.sun</groupId>
          <artifactId>tools</artifactId>
          <version>${java.version}</version>
          <scope>system</scope>
          <systemPath>${java.home}/../lib/tools.jar</systemPath>
        </dependency>
      </dependencies>
    </profile>
  </profiles>

</project>
